--- a/public/index.html
+++ b/public/index.html
@@ -37,19 +37,19 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#AboutMe">
-                        <span id="about-me-link">About Me</span>
+                    <a class="nav-link" href="#Meet Belle">
+                        <span id="about-me-link">Meet Belle</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" id="services-link" href="#Services">Services</a>
+                    <a class="nav-link" id="services-link" href="#Offerings">Offerings</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="contact-link" href="/contact">Contact</a>
+                    <a class="nav-link" id="contact-link" href="/contact">Let's Connect</a>
                 </li>
             </ul>
         </div>
@@ -142,41 +142,84 @@
     </div>
 
     <!-- THIS IS MY FOOTER-->
+    
     <footer id="main-footer">
         <div class="container" id="footer-container">
+
+            //Logo row
             <div class="row">
                 <div class="col-lg-12 col-md-12">
                     <img id="logofooter" src="/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
                 </div>
             </div>
+
+            //Social Media row
             <div class="row">
                 <div class="col-lg-4 col-md-4"></div>
                 <div class="col-lg-4 col-md-4 text-center" id="socialMedia">
-                    
-                        <li class="list-inline-item">
-                            <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/annabelle-chauviray-11326088/">
-                                <i class="fab fa-facebook-square"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/BelleWolski">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="social-link rounded-circle text-white mr-3" href="https://github.com/Belle85">
-                                <i class="fab fa-yelp"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                                <a class="social-link rounded-circle text-white mr-3" href="https://github.com/Belle85">
-                                    <i class="fab fa-pinterest-square"></i>
-                                </a>
-                            </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/BeautifulBirthsbyBelle/">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/doula_belle/">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            <i class="fab fa-yelp"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            <i class="fab fa-pinterest-square"></i>
+                        </a>
+                    </li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-4"></div>
             </div>
+
+            //Footer Menu Row
+            <div class="row">
+                <div class="col-lg-4 col-md-4"></div>
+                <div class="col-lg-4 col-md-4 text-center" id="footerMenu">
+                    <li class="list-inline-item">
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Home
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Meet Belle
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Offerings
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Readings
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Let's Connect
+                        </a>
+                    </li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-4"></div>
+            </div>
+            <hr>
+
+            //Contact Info Row
             <div class="row">
                 <div class="col-lg-12 col-md-12" class="myInfo" id="footerContactInfo">
                     <h2>Beautiful Births Doula Services</h2>
@@ -184,6 +227,13 @@
                     <p class="myInfo">4026 Inverrary Boulevard, Lauderhill, FL 33319</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 text-center">
+                    <button type="button" class="btn btn-sm" id="AdminBtn">Access Admin</button>
+                </div>
+            </div>
+
+            //Copyright Row
             <div class="row">
                 <div class="col-lg-12 col-md-12">
                     <p id="copyright"> Copyright © 2018 beautifulbirthsbybelle | All rights reserved.</p>
